--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<script type="text/javascript">
-  document.href = './slides/2016/jan/index.html';
-</script>
+<html>
+  <head>
+    <META http-equiv="refresh" content="1;./slides/2016/jan"/>
+  </head>
+  <body>
+    <a href="./slides/2016/jan">Web Components Talk</a>
+  </body>
+</html>
